--- a/config/database.yml
+++ b/config/database.yml
@@ -5,26 +5,20 @@
 
 default: &default
   adapter: postgresql
-  host: localhost
   encoding: unicode
-  pool: 5
-  username: aviuser
-  password: avitest
-
-
-#default: &default
-#  adapter: sqlite3
-#  pool: 5
-#  timeout: 5000
-
+  host: localhost
+  pool: 50
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  
+  #username: aviuser
+  #password: avitest
 
 development:
   <<: *default
   database: ff_orders_dev
 
-  #<<: *default
-  #database: db/development.sqlite3
-
+  
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -32,11 +26,9 @@ test:
   <<: *default
   database: ff_orders_test
   
-  #<<: *default
-  #database: db/test.sqlite3
-
+  
 production:
   <<: *default
-  database: ff_orders
-  #<<: *default
-  #database: db/production.sqlite3
+  database: BRWeb
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
